--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acadience-roster-data-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node lib/index.js"
